[package]
name = "cpi_token_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.2.1"
borsh-derive = "1.2.1"
solana-program = "1.17.7"
spl-token = "3.3.0"

[dev-dependencies]
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.9.0"